Closed
Bug 38038
Opened 25 years ago
Closed 25 years ago
CSS ident token should allow the non-latin1 character
Categories
(Core :: CSS Parsing and Computation, defect, P3)
Tracking
()
VERIFIED
FIXED
People
(Reporter: emk, Assigned: attinasi)
Details
Attachments
(2 files)
581 bytes,
text/html
|
Details | |
922 bytes,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Launch Mozilla.
2. Navigate to the following attachment.
Actual result:
Only two paragraphs will be red, and all text will be rendered using default
font.
Expected result:
All paragraphs should be red, and all text should be rendered using "dasaji"
font (if installed).
Occurs on:
2000050215 nightly on Windows 2000.
Reporter | ||
Comment 1•25 years ago
|
||
Reporter | ||
Comment 2•25 years ago
|
||
Comment 3•25 years ago
|
||
Reassigned to Marc to investigate and review the code. I'm not sure whether it's
legal to have non-ascii characters in identifiers.
Assignee: pierre → attinasi
Assignee | ||
Comment 4•25 years ago
|
||
It is legal, and in fact there is already another bug on that exact problem
(class names in non-ASCII, bug 35800). I am testing the patch since it looks
like it should solve the problem... stay tuned.
Assignee | ||
Comment 5•25 years ago
|
||
The patch is good, very good. It also fixes the other testcase in bug
35800, no surprise there. Thanks so much VYV03354@nifty.ne.jp!
I'll bet this checked in as soon as I can.
Status: NEW → ASSIGNED
Assignee | ||
Comment 6•25 years ago
|
||
Patch checked in, bug fixed. Thanks again VYV03354@nifty.ne.jp!
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 7•25 years ago
|
||
Verified fixed using 2000050408 nightly build on Windows 2000.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•