Applied patch from VYV03354@nifty.ne.jp to make class names specified in non-ASCII characters recognizable as parts of selectors. b=38038,35800.